--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,13 +9,28 @@
         tools:context=".ui.main.MainFragment">
 
     <TextView
-            android:id="@+id/message"
+            android:id="@+id/resultText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="MainFragment Smyth kap 39 8104/22642"
+            android:text="@string/frontpageText"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" tools:ignore="LabelFor" />
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/dollarText" android:layout_marginBottom="76dp"
+            app:layout_constraintBottom_toTopOf="@+id/resultText" android:autofillHints="" tools:ignore="LabelFor"/>
+    <Button
+            android:text="@string/convertButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/convertButton" android:layout_marginTop="74dp"
+            app:layout_constraintTop_toBottomOf="@+id/resultText" tools:ignore="LabelFor"/>
 
 </android.support.constraint.ConstraintLayout>
