--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.main.MainFragment">
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-            android:id="@+id/resultText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/frontpageText"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" tools:ignore="LabelFor" />
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/dollarText" android:layout_marginBottom="76dp"
-            app:layout_constraintBottom_toTopOf="@+id/resultText" android:autofillHints="" tools:ignore="LabelFor"/>
-    <Button
-            android:text="@string/convertButtonText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/convertButton" android:layout_marginTop="74dp"
-            app:layout_constraintTop_toBottomOf="@+id/resultText" tools:ignore="LabelFor"/>
+    <data>
+        <variable
+            name = "myViewModel"
+            type = "com.ebookfrenzy.viewmodeldemo.ui.main.MainViewModel"/>
+    </data>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+            android:id="@+id/main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.main.MainFragment">
+
+        <TextView
+                android:id="@+id/resultText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='@{safeUnbox(myViewModel.result)==0.0?"Enter value":String.valueOf(safeUnbox(myViewModel.result))+" euros"}'
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" tools:ignore="LabelFor" />
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:text="@={myViewModel.dollarValue}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/dollarText" android:layout_marginBottom="76dp"
+                app:layout_constraintBottom_toTopOf="@+id/resultText" android:autofillHints="" tools:ignore="LabelFor"/>
+        <Button
+                android:text="@string/convertButtonText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/convertButton"
+                android:layout_marginTop="74dp"
+                android:onClick="@{()-> myViewModel.convertValue()}"
+                app:layout_constraintTop_toBottomOf="@+id/resultText" tools:ignore="LabelFor"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+</layout>
